Prevent initiative image from overflowing into text

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -29,6 +29,7 @@ body {
     width: 100%;
     height: 100%;
     max-width: 100%;
+    max-height: 200px;
     object-fit: contain;
   }
 }
